--- a/Frontend/src/app/app-customer/view/customer-account/c-order/c-order.component.css
+++ b/Frontend/src/app/app-customer/view/customer-account/c-order/c-order.component.css
@@ -22,3 +22,17 @@
 .shadow-sm{
   box-shadow: 0 0.125rem 0.125rem -0.125rem #a8a8a8, 0 0.25rem 0.75rem #a8a8a8 !important
 }
+
+.fa-sync-alt {
+  margin: auto;
+  /*border: 1px solid black;*/
+  /*width: 200px;*/
+  /*height: 100px;*/
+  /*background-color: coral;*/
+  /*color: white;*/
+  animation: mymove 2s infinite;
+}
+
+@keyframes mymove {
+  100% {transform: rotate(360deg);}
+}
