--- a/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
+++ b/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
@@ -93,16 +93,16 @@
               </div>
             </div>
             <div class="col-1">
-              <button
+              <a
                 class="btnView btn  btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
                 type="button" data-bs-toggle="collapse" style="background-color: #af7602;color: white"
                 aria-expanded="true"
-                href="#cart-item-list-2">
+                href="#cart-item-list-{{i}}">
                 <i class="fi-eye-on"></i>
-              </button>
+              </a>
             </div>
           </div>
-          <div class="collapse mb-1" id="cart-item-list-2">
+          <div class="collapse mb-1" id="cart-item-list-{{i}}">
             <div class="card card-body border-none" style="padding: 15px 5px 0px 5px">
               <!--Order detail card 1-->
               <div class="order-detail-card"
