--- a/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order-view/ba-order-view.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order-view/ba-order-view.component.html
@@ -74,11 +74,17 @@
           </p>
         </div>
       </div>
-      <div class="d-flex align-items-center justify-content-between pb-1"
-           [ngStyle]="{'margin-bottom': !last?'10px':'0px'}">
-        <span class="fs-md text-primary ms-2"><i class="fi-checkbox-checked-alt"></i></span>
-        <div class="form-check form-check-dark" style="margin-bottom: 0px">
-          <input class="form-check-input" type="checkbox" id="compare1">
+      <div class="d-flex align-items-center justify-content-between pb-1">
+        <span class="fs-md text-primary ms-2">
+          <!--<i class="fi-checkbox-checked-alt"></i>-->
+        </span>
+        <div *ngIf="orderDetail.status==='In Progress'" class="form-check form-check-dark" style="margin-bottom: 0px;display: flex">
+          <div style="font-weight: bold;margin-right: 30px;font-size: 14px">Accept</div>
+          <div>
+            <input class="form-check-input" type="checkbox" id="compare1"
+                   [checked]="orderDetail.available"
+                   (click)="acceptItem(orderDetail.orderDetailId)">
+          </div>
           <!-- <label class="form-check-label fs-sm" for="compare1">Compare</label> -->
         </div>
       </div>
