--- a/Frontend/src/app/app-customer/view/customer-account/c-order/c-order.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/c-order/c-order.component.html
@@ -21,19 +21,63 @@
       </a>
       <div class="row collapse d-md-block justify-content-between border-bottom-md" id="account-nav">
 
-        <ul class="nav nav-pills pt-4 pt-md-2 pb-md-2 w-50" role="tablist">
-          <li class="nav-item mb-md-0 me-md-2 pe-md-1"><a class="nav-link active" href="#client-following-view"
-                                                          data-bs-toggle="tab" role="tab"><i
-            class="fi-building mt-n1 me-2 fs-base"></i>
-            {{getUser().customerProfile.countPendingOrders}}
-            Pending Order{{getUser().customerProfile.countPendingOrders>1?'s':''}}
-          </a></li>
-          <li class="nav-item mb-md-0 me-md-2 pe-md-1"><a class="nav-link active" href="#client-following-view"
-                                                          data-bs-toggle="tab" role="tab"><i
-            class="fi-building mt-n1 me-2 fs-base"></i>
-            {{getUser().customerProfile.countPendingOrders}}
-            Pending Order{{getUser().customerProfile.countPendingOrders>1?'s':''}}
-          </a></li>
+        <!--<ul class="nav nav-pills pt-4 pt-md-2 pb-md-2 w-50" role="tablist">-->
+        <!--<li class="nav-item mb-md-0 me-md-2 pe-md-1"><a class="nav-link active" href="#client-following-view"-->
+        <!--data-bs-toggle="tab" role="tab"><i-->
+        <!--class="fi-building mt-n1 me-2 fs-base"></i>-->
+        <!--{{getUser().customerProfile.countPendingOrders}}-->
+        <!--Pending Order{{getUser().customerProfile.countPendingOrders>1?'s':''}}-->
+        <!--</a></li>-->
+        <!--<li class="nav-item mb-md-0 me-md-2 pe-md-1"><a class="nav-link active" href="#client-following-view"-->
+        <!--data-bs-toggle="tab" role="tab"><i-->
+        <!--class="fi-building mt-n1 me-2 fs-base"></i>-->
+        <!--{{getUser().customerProfile.countPendingOrders}}-->
+        <!--Pending Order{{getUser().customerProfile.countPendingOrders>1?'s':''}}-->
+        <!--</a></li>-->
+        <!--</ul>-->
+        <ul class="nav nav-tabs nav-fill mb-4" role="tablist">
+          <li class="nav-item me-sm-3 mb-3">
+            <a
+              class="nav-link text-center active"
+              href="#pending-order-tab"
+              data-bs-toggle="tab"
+              role="tab"
+              aria-controls="pending-order-tab"
+              aria-selected="true"
+              style="color: black"
+            >
+              Pending
+              <span class="badge rounded-pill bg-warning" style="font-weight: bold">{{pendingOrders.length}}</span>
+            </a>
+          </li>
+          <li class="nav-item me-sm-3 mb-3">
+            <a
+              class="nav-link text-center"
+              href="#complete-order-tab"
+              data-bs-toggle="tab"
+              role="tab"
+              aria-controls="inprogress-order-tab"
+              aria-selected="true"
+              style="color: black"
+            >
+              Completed
+              <span class="badge rounded-pill bg-success" style="font-weight: bold">{{completedOrders.length}}</span>
+            </a>
+          </li>
+          <li class="nav-item me-sm-3 mb-3">
+            <a
+              class="nav-link text-center"
+              href="#cancel-order-tab"
+              data-bs-toggle="tab"
+              role="tab"
+              aria-controls="complete-order-tab"
+              aria-selected="true"
+              style="color: black"
+            >
+              Canceled
+              <span class="badge rounded-pill bg-danger" style="font-weight: bold">{{canceledOrders.length}}</span>
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -41,198 +85,18 @@
   </div>
   <div class="tab-content">
 
-    <div class="tab-pane fade show active" id="client-following-view" role="tabpanel">
-      <!--client order grid-->
-      <div class="row g-4 py-1">
-        <div class="col-md-12" *ngFor="let shopItemOrder of shopItemOrders;let i=index" style="margin-bottom: 10px">
-          <div class="card border-0 shadow-sm mb-2">
-            <blockquote class="blockquote co card-body">
-              <div class="d-flex justify-content-between mb-2">
-                <div class="pe-3">
-                  <div class="d-flex align-items-center mb-2">
-                    <!--<a class="btn btn-icon btn-warning btn-md rounded-circle me-2 mb-0" href="#"-->
-                    <!--data-bs-toggle="tooltip" title="Order still in Pending status."-->
-                    <!--data-bs-original-title="Order still in Pending status."-->
-                    <!--aria-label="Order still in Pending status.">-->
-                    <!--<i class="fi-car"></i></a>-->
-                    <i *ngIf="shopItemOrder.itemOrder.status==='Pending'" class="fas fa-sync-alt"
-                       style="margin-left: 10px;font-size: 30px;color: #e9ad2d;margin-right: 10px"></i>
-                    <!--<i *ngIf="shopItemOrder.itemOrder.status==='In Progress'" class="fas fa-sync-alt" style="margin-left: 10px;font-size: 30px;color: #0f7ae6;margin-right: 10px"></i>-->
-                    <i *ngIf="shopItemOrder.itemOrder.status==='Completed'" class="fas fa-check-circle"
-                       style="margin-left: 10px;font-size: 30px;color: #03943c;margin-right: 10px"></i>
-                    <!-- <img class="rounded-circle me-1" src="./asset/img/37.png" width="48" alt="Avatar"> -->
-                    <div class="ps-2">
-                      <h6 class="fs-base mb-0">{{shopItemOrder.itemOrder.orderId}}</h6>
-                      <div class="text-muted fw-normal fs-sm">{{shopItemOrder.itemOrder.orderDate}}</div>
-                    </div>
-                  </div>
-                </div>
-                <div>
-                  <div class="text-muted fs-sm mt-1">5 min ago</div>
-                </div>
-              </div>
-              <div class="section-second mb-3">
-                <div class="row cols-md-4 col-info" style="padding-top: 10px">
-                  <div class="col-4">
-                    <div style="background-color: rgba(229,154,3,0.35)">
-                      <div class="mb-2 fs-sm fw-bold" style="color: #704900">Quantity</div>
-                      <div class="fs-sm fw-bold" style="color: #925f00">{{shopItemOrder.itemOrder.qty}}</div>
-                    </div>
-                  </div>
-
-                  <div class="col-7">
-                    <div style="background-color: rgba(229,101,2,0.35)">
-                      <div class="mb-2 fs-sm fw-bold" style="color: #703f02">Total Price</div>
-                      <div class="fs-sm fw-bold" style="color: #945302">{{'LKR ' + shopItemOrder.itemOrder.amount}}
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-1" style="display: grid;align-content: center;justify-content: center">
-                    <a
-                      class="btnView btn  btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
-                      type="button" data-bs-toggle="collapse" style="background-color: #e9ad2d;color: white"
-                      aria-expanded="true"
-                      href="#item-list{{i}}">
-                      <i class="fi-eye-on"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="collapse mb-3" id="item-list{{i}}">
-                <div class="card card-body" style="border: 3px solid rgba(120,120,120,0.17);padding-top: 0px">
-                  <!--Order detail card 1-->
-                  <div class="order-detail-card" style="margin-bottom: 0px"
-                       [ngStyle]="{'border-bottom': !last?'3px solid #177f4e':''}"
-                       *ngFor="let shop of shopItemOrder.shops;let last = last">
-                    <div class="fs-sm" style="margin-top: 15px;margin-bottom: 15px">
-                      <div *ngIf="shop.status==='Pending'" style="margin-bottom: 15px">
-                        <!--<span style="background-color: #e29e08;padding: 5px 15px 5px 15px;border-radius: 15px">{{shopItemOrder.itemOrder.status}}</span>-->
-                        <i class="fas fa-sync-alt" style="margin-left: 16px;font-size: 20px;color: #e9ad2d"></i>
-                      </div>
-                      <div *ngIf="shop.status==='Canceled'" style="margin-bottom: 15px;text-align: right">
-                        <span style="background-color: #943630;padding: 5px 15px 5px 15px;border-radius: 15px">{{shopItemOrder.itemOrder.status}}</span>
-                      </div>
-                      <div *ngIf="shop.status==='Completed'" style="margin-bottom: 15px">
-                        <i class="fas fa-check-circle" style="margin-left: 16px;font-size: 20px;color: #03943c"></i>
-                      </div>
-                      <div *ngIf="shop.status==='In Progress'" style="margin-bottom: 15px">
-                        <!--<span style="background-color: #0f7ae6;padding: 5px 15px 5px 15px;border-radius: 15px">{{shopItemOrder.itemOrder.status}}</span>-->
-                        <i class="fas fa-sync-alt" style="margin-left: 16px;font-size: 20px;color: #0f7ae6"></i>
-
-                      </div>
-                      <div class="d-flex d-md-block d-lg-flex align-items-start">
-                        <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48"
-                             alt="Annette Black">
-                        <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3" style="width: 30%">
-                          <div style="font-weight: bold">
-                            {{shop.shop.businessName}}
-                          </div>
-                          <div class="text-muted fw-normal fs-sm">xc</div>
-                        </div>
-                        <div style="width: 70%;display: flex;justify-content: end;margin-right: 0px">
-                          <div class="row col-info"
-                               style="width: 100%">
-                            <!--<div style="padding-top: 10px">-->
-                            <div class="col">
-                              <div style="background-color: rgba(229,154,3,0.35);margin-right: 0px">
-                                <div class="mb-2 fs-sm fw-bold" style="color: #704900">Quantity</div>
-                                <div class="fs-sm fw-bold" style="color: #925f00">{{shop.itemCount}}</div>
-                              </div>
-                            </div>
-
-                            <div class="col">
-                              <div style="background-color: rgba(229,101,2,0.35);margin-right: 0px">
-                                <div class="mb-2 fs-sm fw-bold" style="color: #703f02">Total Price</div>
-                                <div class="fs-sm fw-bold" style="color: #945302">{{'LKR ' + shop.totalPrice}}
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col-2" style="display: grid;align-content: center;justify-content: center">
-                              <a (click)="shop.expand?(shop.expand=false):(shop.expand=true)"
-                                 class="btnView btn  btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
-                                 type="button" data-bs-toggle="collapse" style="background-color: #e9ad2d;color: white"
-                                 aria-expanded="true">
-                                <i class="fi-eye-on"></i>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div style="width: 100%" *ngIf="shop.expand">
-
-                        <div style="text-align: right;width: 100%;font-weight: bold;margin-top: 10px">
-                          <!--{{orderDetail.status}}-->
-                        </div>
-                        <div *ngFor="let orderDetail of shop.items;let itemLast=last;let itemFirst=first"
-                             style="border: 1px solid #c0c0c0;border-radius: 10px;padding: 15px;margin-bottom: 15px"
-                             [ngStyle]="{'margin-top':itemFirst?'30px':'0px'}">
-                          <div class="d-flex align-items-center justify-content-between pb-1">
-                            <h3 class="h6 fs-base" style="margin-bottom: 0px;display: flex">
-                              <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#item-viewer">
-                                {{orderDetail.orderDetailType==='Item'?orderDetail.item.name:orderDetail.orderDetailType==='ItemPackage'?orderDetail.itemPackage.name:''}}
-                              </a>
-                              <i *ngIf="orderDetail.status==='Pending'" class="fas fa-sync-alt"
-                                 style="margin-left: 10px;font-size: 18px;color: #e9ad2d"></i>
-                              <i *ngIf="orderDetail.status==='In Progress' && !orderDetail.available" class="fas fa-sync-alt"
-                                 style="margin-left: 10px;font-size: 18px;color: #0f7ae6"></i>
-                              <i *ngIf="orderDetail.status==='In Progress' && orderDetail.available" class="fas fa-check-circle"
-                                 style="margin-left: 10px;font-size: 18px;color: #03943c"></i>
-                            </h3>
-                            <span *ngIf="orderDetail.orderDetailType==='Item'"
-                                  class="badge rounded-pill bg-info"> Item </span>
-                            <span *ngIf="orderDetail.orderDetailType==='ItemPackage'"
-                                  class="badge rounded-pill bg-success"> Package </span>
-                          </div>
-                          <div class="row cols-sm-2 row-cols-md-12"
-                               style="margin-top: 10px;margin-bottom: 10px">
-                            <div class="col" style="padding: 0px">
-                              <div style="border-right: 1px solid #d3d3d3">
-                                <p class="mb-1 fs-sm"
-                                   style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
-                                  Quantity </p>
-                                <p class="mb-2 fs-sm text-primary fw-bold mx-2" style="text-align: center">
-                                  {{orderDetail.quantity}}</p>
-                              </div>
-                            </div>
-                            <div class="col" style="padding: 0px">
-                              <p class="mb-1 fs-sm"
-                                 style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
-                                Total Price </p>
-                              <p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">
-                                LKR {{orderDetail.price * orderDetail.quantity}}
-                              </p>
-                            </div>
-                          </div>
-                          <!--<div-->
-                            <!--style="width: 100%;margin: 0px auto 20px auto;padding-bottom: 0px;border-color: rgba(120,120,120,0.49)"-->
-                            <!--[ngStyle]="{'border-bottom': !itemLast?'3px solid rgba(120,120,120,0.17)':''}"></div>-->
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-              <footer class="d-flex justify-content-end">
-                <a href="#" class="btn btn-icon btn-danger btnhred btn-xs rounded-circle me-2 mb-2"
-                   data-bs-toggle="tooltip" title="Cancel Order" data-bs-original-title="Cancel Order"
-                   aria-label="Cancel Order">
-                  <i class="fi-x"></i>
-                </a>
-                <!-- <a href="#" class="btn btn-icon btn-light-primary btnhgreen btn-xs shadow-sm rounded-circle me-2 mb-2" data-bs-toggle="tooltip" title="Order Completed" data-bs-original-title="Order Completed" aria-label="Order Completed">
-                  <i class="fi-check"></i>
-                </a>
-                <a href="#" class="btn btn-icon btn-light-primary btnhblue btn-xs shadow-sm rounded-circle me-2 mb-2" data-bs-toggle="tooltip" title="Order In Progress" data-bs-original-title="Order In Progress" aria-label="Order In Progress">
-                  <i class="fi-arrow-long-right"></i>
-                </a> -->
-              </footer>
-            </blockquote>
-
-          </div>
-        </div>
-      </div>
-
+    <div class="tab-pane fade show active" id="pending-order-tab" role="tabpanel">
+      <app-c-order-view [shopItemOrders]="pendingOrders" [orderIndex]="('p')"></app-c-order-view>
     </div>
+
+    <div class="tab-pane fade show" id="complete-order-tab" role="tabpanel">
+      <app-c-order-view [shopItemOrders]="completedOrders" [orderIndex]="('co')"></app-c-order-view>
+    </div>
+
+    <div class="tab-pane fade show" id="cancel-order-tab" role="tabpanel">
+      <app-c-order-view [shopItemOrders]="canceledOrders" [orderIndex]="('ca')"></app-c-order-view>
+    </div>
+
   </div>
 
 </div>
